@@ -1,14 +1,14 @@
 package club.ttg.dnd5.domain.book.service;
 
-import club.ttg.dnd5.domain.book.rest.mapper.BookMapper;
-import club.ttg.dnd5.domain.book.rest.dto.BookDetailResponse;
-import club.ttg.dnd5.domain.book.model.TypeBook;
+import club.ttg.dnd5.domain.book.model.Book;
 import club.ttg.dnd5.domain.book.repository.BookRepository;
+import club.ttg.dnd5.domain.book.rest.mapper.BookMapper;
+import club.ttg.dnd5.domain.common.rest.dto.ShortResponse;
+import club.ttg.dnd5.exception.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -16,12 +16,17 @@ public class BookService {
     private final BookRepository bookRepository;
     private final BookMapper bookMapper;
 
-    public List<BookDetailResponse> getAllBooks() {
-        return bookRepository.findAll().stream().map(bookMapper::toDetailResponse).collect(Collectors.toList());
+    public List<ShortResponse> getAllBooks() {
+        return bookRepository.findAll()
+                .stream()
+                .map(bookMapper::toShortResponse)
+                .toList();
     }
 
-    // Получение всех типов книг
-    public List<String> getAllBookTypes() {
-        return Arrays.stream(TypeBook.values()).map(TypeBook::getName).toList();
+    public Book findByUrl(String url) {
+        return bookRepository.findById(url)
+                .orElseThrow(() -> new EntityNotFoundException(String.format("Книга с url %s не существует" , url)));
+
     }
+
 }
